- added ok-unused and unused-ok icons (bnc#587879)

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -588,6 +588,12 @@ input[type="button"] {
 .status-icon.unused {
   background-position: 0 -89px;
 }
+.status-icon.ok-unused {
+  background-position: 0 -108px;
+}
+.status-icon.unused-ok {
+  background-position: 0 -128px;
+}
 .status-icon.none {
   background: transparent;
 }
