repos - make the "delete" buttons look disabled when an action is in progress
- 0.1.18

--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -64,6 +64,7 @@
       // disable all delete buttons
       $('a.button').attr('onclick','return false;');
       $('a.button').attr('href','');
+      $('a.button').attr('disabled', 'disabled');
     };
 
     // onsubmit handler
