base-ui - added style for disabled link with class "button"
- 0.1.20

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -537,6 +537,7 @@ input[type="button"] {
   input.button {
     padding: 2px 9px;
   }
+  a.button[disabled],
   input[type="submit"][disabled],
   input[type="submit"][disabled]:hover {
     color: #999;
