--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -109,10 +109,14 @@
     <%=  "checked=\"checked\"" if Ntp.available? %>
     > <%=_("Synchronize via Network Time Protocol (NTP)")%></label>
   </p>
-  <% if Ntp.available? && !(@ntp.server_defined?) %>
+  <% if Ntp.available? %>
   <p>
     <label for="ntp_server"><%= _("NTP server") %></label>
-    <%= text_field_tag "ntp_server", ""%>
+    <%=
+      options = {}
+      options[:disabled] = "disabled" unless Ntp.permissions[:setserver]
+      text_field_tag "ntp_server", @ntp.actions.ntp_server || "", options
+    %>
   </p>
   <% end %>
 
