fixed closed tag

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -59,7 +59,7 @@ function disable(which){
 
 <form action="#" id="quicksearch" class="pad1_2em">
   <label><%= _("Filter:") %></label>
-  <input type="text" id="users_search"></input>
+  <input type="text" id="users_search"/>
 </form>
 
 <div class='pad1_2em'>
