added zoom option

--- a/plugins/status/app/views/status/_status_graph.html.erb
+++ b/plugins/status/app/views/status/_status_graph.html.erb
@@ -73,7 +73,14 @@
                    tickOptions:{formatString:'%.0f'},
                  <% end %>
                  numberTicks:5}
-    }
+    },
+    cursor: {  
+      showVerticalLine:false,
+      showHorizontalLine:false,
+      showCursorLegend:false,
+      showTooltip: true,
+      zoom:true
+    } 
   });
 <% end %>
 
