--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -5,6 +5,7 @@
 <%= javascript_include_tag "plugin/jqplot.categoryAxisRenderer.js" %>
 <%= javascript_include_tag "plugin/jqplot.dateAxisRenderer.js" %>
 <%= javascript_include_tag "plugin/jqplot.canvasTextRenderer.js" %>
+<%= javascript_include_tag "plugin/jqplot.cursor.js" %>
 <% end %>
 
 <% content_for :before_script do %>
