--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -96,24 +96,24 @@
       <legend><%= _("Login Settings") %></legend>
       <div>
         <p>
-          <label><%=_("Full Name")%></label>
-          <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login();" %>
+          <div class="label"><%=_("Full Name")%></div>
+          <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login(this.parentNode.parentNode);" %>
         </p>
         <p>
-          <label><%=_("Login Name")%></label>
-          <%= f.text_field :uid, :disabled => disabled, :onblur => "propose_home();" %>
+          <div class="label"><%=_("Login Name")%></div>
+          <%= f.text_field :uid, :disabled => disabled, :onblur => "propose_home(this.parentNode.parentNode.parentNode);" %>
           <%= f.text_field :id, :class => "hidden" %>
         </p>
         <p>
-          <label><%=_("Password")%></label>
+          <div class="label"><%=_("Password")%></div>
           <%= f.password_field :user_password, :onkeyup => "$('#userForm').validate().element('#user_user_password');", :disabled => disabled %>
         </p>
         <p>
-          <label><%=_("Confirm Password")%></label>
+          <div class="label"><%=_("Confirm Password")%></div>
           <%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :onkeyup => "$('#userForm').validate().element('#user_user_password2');" %>
         </p>
         <!-- this is a pre-generated placeholder for the validation messages -->
-        <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
+        <p><div class="label" for="administrator_confirm_password" generated="true" class="error"></div></p>
       </div>
     </fieldset>
 
@@ -121,13 +121,13 @@
       <legend><%=_("Groups")%></legend>
       <div>
         <p>
-            <label><%=_("Groups")%></label>
+            <div class="label"><%=_("Groups")%></div>
             <%= f.text_field :grp_string, :disabled => disabled, :onkeyup => "groups_validation();" %>
             <a href="#" class="button" onClick="open_groups_dialog();return false;">Manage Groups</a>
         </p>
-        <p><label id="groups-error" class="error"></label><p>
+        <p><div class="label" id="groups-error" class="error"></div></p>
         <p>
-            <label><%=_("Default Group")%></label>
+            <div class="label"><%=_("Default Group")%></div>
             <%= f.text_field :groupname, :disabled => disabled %>
             <a href="#" class="button" onClick="open_def_group_dialog();return false;">Select Default Group</a>
         </p>
@@ -152,18 +152,18 @@
       <legend><%= _("Advanced") %></legend>
       <div>
         <p>
-            <label><%=_("Home Directory")%></label>
+            <div class="label"><%=_("Home Directory")%></div>
             <%= f.text_field :home_directory, :disabled => disabled %>
         </p>
         <p>
-            <label><%=_("Login Shell")%></label>
+            <div class="label"><%=_("Login Shell")%></div>
             <%= f.text_field :login_shell, :disabled => disabled %>
         </p>
         <p>
-            <label><%=_("UID Number")%></label>
+            <div class="label"><%=_("UID Number")%></div>
             <%= f.text_field :uid_number, :disabled => disabled, :min => 1000, :class => "number", :onkeyup => "$('#userForm').validate().element('#user_uid_number');"  %>
         </p>
-        <p><label id="uid-error" class="error"></label><p>
+        <p><div class="label" id="uid-error" class="error"></div><p>
       </div>
     </fieldset>
 
