--- a/plugins/patch_updates/app/views/patch_updates/_patches.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/_patches.html.erb
@@ -4,6 +4,13 @@
         $("INPUT[type='checkbox']").attr('checked', $('#All').is(':checked'));      
     };
   <% end %>
+
+<% if @patch_updates.any? {|pu| pu.name =~ /yast2-web|lighttpd/} %>
+<p class="flash-message ui-state-highlight"><%=
+_("One of the patches seems to update WebYaST itself.
+You may need to reload the page after applying the patch.") -%></p>
+<% end %>
+
 <table class="patches" <%= @patch_updates.empty? ? "style=\"visibility: hidden;\"" : "" %> >
   <tr>
     <th class="first checkbox" width=8% >
