--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -5,27 +5,38 @@
     label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50% }
   </style>
 
+<%= javascript_include_tag "validation.js" %>
 <script type="text/javascript">
     // define custom validation function for SMTP server validation
-    jQuery.validator.addMethod("smtp_server", function(value, element) {
-      return this.optional(element)
-        // FQDN: http://regexlib.com/REDetails.aspx?regexp_id=391
-        || /^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}(:[0-9]{1,5}|)$/.test(value)
-        // IPv4: http://regexlib.com/REDetails.aspx?regexp_id=32
-        || /^(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9])\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[0-9])(:[0-9]{1,5}|)$/.test(value)
-        // IPv6: http://regexlib.com/REDetails.aspx?regexp_id=906 + allow lowercase hexa letters (a-f)
-        || /^(^(([0-9A-Fa-f]{1,4}(((:[0-9A-Fa-f]{1,4}){5}::[0-9A-Fa-f]{1,4})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){4}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,1})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){3}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,2})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){2}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,3})(:[0-9]{1,5}|)|(:[0-9A-Fa-f]{1,4}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,4})(:[0-9]{1,5}|)|(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,5})(:[0-9]{1,5}|)|(:[0-9A-Fa-f]{1,4}){7}))(:[0-9]{1,5}|)$|^(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,6})(:[0-9]{1,5}|)$)|^::(:[0-9]{1,5}|)$)|^((([0-9A-Fa-f]{1,4}(((:[0-9A-Fa-f]{1,4}){3}::([0-9A-Fa-f]{1,4}){1})|((:[0-9A-Fa-f]{1,4}){2}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,1})|((:[0-9A-Fa-f]{1,4}){1}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,2})|(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,3})|((:[0-9A-Fa-f]{1,4}){0,5})))|([:]{2}[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,4})):|::)((25[0-5]|2[0-4][0-9]|[0-1]?[0-9]{0,2})\.){3}(25[0-5]|2[0-4][0-9]|[0-1]?[0-9]{0,2})(:[0-9]{1,5}|)$$/.test(value);
-
-    }, "<%= _("Enter a valid domain name or an IP address.") -%>");
-
+//     jQuery.validator.addMethod("smtp_server", function(value, element) {
+//       return this.optional(element)
+//         // FQDN: http://regexlib.com/REDetails.aspx?regexp_id=391
+//         || /^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}(:[0-9]{1,5}|)$/.test(value)
+//         // IPv4: http://regexlib.com/REDetails.aspx?regexp_id=32
+//         || /^(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9])\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[0-9])(:[0-9]{1,5}|)$/.test(value)
+//         // IPv6: http://regexlib.com/REDetails.aspx?regexp_id=906 + allow lowercase hexa letters (a-f)
+//         || /^(^(([0-9A-Fa-f]{1,4}(((:[0-9A-Fa-f]{1,4}){5}::[0-9A-Fa-f]{1,4})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){4}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,1})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){3}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,2})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){2}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,3})(:[0-9]{1,5}|)|(:[0-9A-Fa-f]{1,4}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,4})(:[0-9]{1,5}|)|(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,5})(:[0-9]{1,5}|)|(:[0-9A-Fa-f]{1,4}){7}))(:[0-9]{1,5}|)$|^(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,6})(:[0-9]{1,5}|)$)|^::(:[0-9]{1,5}|)$)|^((([0-9A-Fa-f]{1,4}(((:[0-9A-Fa-f]{1,4}){3}::([0-9A-Fa-f]{1,4}){1})|((:[0-9A-Fa-f]{1,4}){2}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,1})|((:[0-9A-Fa-f]{1,4}){1}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,2})|(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,3})|((:[0-9A-Fa-f]{1,4}){0,5})))|([:]{2}[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,4})):|::)((25[0-5]|2[0-4][0-9]|[0-1]?[0-9]{0,2})\.){3}(25[0-5]|2[0-4][0-9]|[0-1]?[0-9]{0,2})(:[0-9]{1,5}|)$$/.test(value);
+// 
+//     }, "<%= _("Enter a valid domain name or an IP address.") -%>");
+  
+	 $(document).ready(function() {
+		validateDomainName("smtp_server"); 
+		$("#mailForm").validate({
+		  smtp_server: {required:true},
+		  messages: {
+			 smtp_server: "Please enter valid domain name or IP address for SMTP server"
+		  },
+		  success: "valid"
+		});
+	 });
+  
     $(document).ready(function() {
       $("#mailForm").validate()
-
-      // make the error message translatable - override the default messsage
-      $.extend($.validator.messages, {
-	equalTo: "<%= _("The passwords do not match.") -%>",
-	email:	 "<%= _("Enter a valid e-mail address.") -%>"
-      });
+       // make the error message translatable - override the default messsage
+       $.extend($.validator.messages, {
+	 equalTo: "<%= _("The passwords do not match.") -%>",
+	 email:	 "<%= _("Enter a valid e-mail address.") -%>"
+       });
     });
 
     $(document).ready(function() {
@@ -54,7 +65,7 @@
     <fieldset  class="wrapper with-background">
       <p>
         <label for="<%= :smtp_server %>"><%=_("Outgoing mail server")%></label>
-        <%=f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></p>
+        <%=f.text_field :smtp_server, :disabled => disabled, :title=>"Please enter valid domain name or IP address for SMTP server", :class => "smtp_server" %></p>
       <p>
         <label><%=_("Use secure connection (TLS)")%></label>
         <%= f.select :transport_layer_security, [ [_("Never"), "no" ], [_("If available"), "yes"], [_("Always"), "must"]], :disabled => disabled %></p>
