--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -7,27 +7,15 @@
 
 <%= javascript_include_tag "validation.js" %>
 <script type="text/javascript">
-    // define custom validation function for SMTP server validation
-//     jQuery.validator.addMethod("smtp_server", function(value, element) {
-//       return this.optional(element)
-//         // FQDN: http://regexlib.com/REDetails.aspx?regexp_id=391
-//         || /^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}(:[0-9]{1,5}|)$/.test(value)
-//         // IPv4: http://regexlib.com/REDetails.aspx?regexp_id=32
-//         || /^(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9])\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[0-9])(:[0-9]{1,5}|)$/.test(value)
-//         // IPv6: http://regexlib.com/REDetails.aspx?regexp_id=906 + allow lowercase hexa letters (a-f)
-//         || /^(^(([0-9A-Fa-f]{1,4}(((:[0-9A-Fa-f]{1,4}){5}::[0-9A-Fa-f]{1,4})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){4}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,1})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){3}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,2})(:[0-9]{1,5}|)|((:[0-9A-Fa-f]{1,4}){2}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,3})(:[0-9]{1,5}|)|(:[0-9A-Fa-f]{1,4}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,4})(:[0-9]{1,5}|)|(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,5})(:[0-9]{1,5}|)|(:[0-9A-Fa-f]{1,4}){7}))(:[0-9]{1,5}|)$|^(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,6})(:[0-9]{1,5}|)$)|^::(:[0-9]{1,5}|)$)|^((([0-9A-Fa-f]{1,4}(((:[0-9A-Fa-f]{1,4}){3}::([0-9A-Fa-f]{1,4}){1})|((:[0-9A-Fa-f]{1,4}){2}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,1})|((:[0-9A-Fa-f]{1,4}){1}::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,2})|(::[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,3})|((:[0-9A-Fa-f]{1,4}){0,5})))|([:]{2}[0-9A-Fa-f]{1,4}(:[0-9A-Fa-f]{1,4}){0,4})):|::)((25[0-5]|2[0-4][0-9]|[0-1]?[0-9]{0,2})\.){3}(25[0-5]|2[0-4][0-9]|[0-1]?[0-9]{0,2})(:[0-9]{1,5}|)$$/.test(value);
-// 
-//     }, "<%= _("Enter a valid domain name or an IP address.") -%>");
   
     $(document).ready(function() {
-		validateDomainNameWithPortNumber("smtp_server");
-		//validateDomainName("smtp_server"); 
+      validateDomainNameWithPortNumber("smtp_server");
       $("#mailForm").validate()
        // make the error message translatable - override the default messsage
        $.extend($.validator.messages, {
 		  equalTo: "<%= _("The passwords do not match.") -%>",
 		  email:	 "<%= _("Enter a valid e-mail address.") -%>",
-		  smtp_server: "<%= _("Please enter valid domain name or IP address for SMTP server") -%>" 
+		  smtp_server: "<%= _("Enter a valid domain name or an IP address.")  -%>" 
        });
     });
 
