Add margin to legend title (bnc#592301)

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -442,6 +442,11 @@ legend {
   font-weight: bold;
 }
 
+/* IE8: bnc#592301 */
+legend span {
+  margin-left: 2px;
+}
+
 label {
   display: block; 
   float: left;
