--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <% content_for :head do %>
 
 <%= javascript_include_tag "jquery.quicksearch.js"-%>
-<%= javascript_include_tag "users_edit.js" %>
 
  <style>
     .pad1_2em {
@@ -86,11 +85,11 @@ function disable(which){
       <div>
         <p>
           <div class="label"><%=_("Full Name")%></div>
-          <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login(this);" %>
+          <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login();" %>
         </p>
         <p>
           <div class="label"><%=_("Login Name")%></div>
-          <%= f.text_field :uid, :disabled => disabled, :onblur => "propose_home(this);" %>
+          <%= f.text_field :uid, :disabled => disabled, :onblur => "propose_home();" %>
           <%= f.text_field :id, :class => "hidden" %>
         </p>
         <p>
@@ -101,6 +100,9 @@ function disable(which){
           <div class="label"><%=_("Confirm Password")%></div>
           <%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :onkeyup => "$('#userForm').validate().element('#user_user_password2');" %>
         </p>
+      </div>
+
+      <div>
         <p>
             <div class="label"><%=_("Groups")%></div>
             <%= f.text_field :grp_string, :disabled => disabled, :onkeyup => "groups_validation();" %>
@@ -111,6 +113,9 @@ function disable(which){
             <div class="label"><%=_("Default Group")%></div>
             <%= f.text_field :groupname, :disabled => disabled %>
         </p>
+     </div>
+
+      <div>
         <p>
             <div class="label"><%=_("Home Directory")%></div>
             <%= f.text_field :home_directory, :disabled => disabled %>
@@ -141,6 +146,7 @@ function disable(which){
   <% end %>
  </div>
 
+</div>
 
 <fieldset>
   <%= form_back_button -%>
