open bugzilla page in new window (bnc#579465)

--- a/webclient/app/views/shared/exception_trap.html.erb
+++ b/webclient/app/views/shared/exception_trap.html.erb
@@ -15,7 +15,7 @@ $(document).ready(function() {
   <%= h error.message %>
 </pre></p>
 
-<p><span class="bug-icon"></span><%= _("Please Report a bug so we can fix the problem!.") %><a href="<%= @bug_url %>"><%= _("(report link)") %></a></p>
+<p><span class="bug-icon"></span><%= _("Please Report a bug so we can fix the problem!.") %><a target="_blank" href="<%= @bug_url %>"><%= _("(report link)") %></a></p>
 <p><%= _("Don't forget to include the bug details.") %></p>
 
   <%
