--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -35,7 +35,7 @@
 
       $("#administrator_password").pstrength({
 	  'displayMinChar'	: true,
-	  'minCharText'		: 'Password Strength: ',
+	  'minCharText'		: "<%= _("Password Strength:") %>",
 	  'verdicts'		: [
 	    "<%= _("Weak") %>",
 	    "<%= _("Normal") %>",
