marked "Password Strength:" string for translation (bnc#596043)

--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -50,7 +50,7 @@
 
    $("#user_user_password").pstrength({
      'displayMinChar'        : true,
-     'minCharText'      : 'Password Strength:', 
+     'minCharText'      : "<%= _("Password Strength:") %>", 
        'verdicts'                : [
             "<%= _("Weak") %>",
             "<%= _("Normal") %>",
