--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -53,7 +53,7 @@
 
    $("#user_user_password").pstrength({
       'displayMinChar'      : true,
-      'minCharText'      : 'Password Strength:', 
+      'minCharText'      : "<%= _("Password Strength:") %>", 
       'verdicts'      : [
             "<%= _("Weak") %>",
             "<%= _("Normal") %>",
