use Cancel instead of Back (bnc#593348)

--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -90,7 +90,7 @@
       :locals => { :f => f, :disabled => disabled } %>
 
       <fieldset>
-        <%= form_back_button :action => :index%>
+        <%= form_cancel_button :action => :index%>
         <%= form_str_spacer %>
         <%= form_next_button :disabled => disabled, :onclick=>"return edit_user_validation();" %>
       </fieldset>
