--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -93,7 +93,7 @@
       :locals => { :f => f, :disabled => false } %>
 
   <fieldset>
-    <%= form_back_button :action => :index%>
+    <%= form_cancel_button :action => :index%>
     <%= form_str_spacer %>
     <%= form_next_button :onclick=>"return new_user_validation();" %>
   </fieldset>
