firewall: reformulation of needed service validation

--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -39,24 +39,21 @@
   function validateNeededServices() {
     var use_firewall_old = <%= @firewall.use_firewall ? "true" : "false" %>;
     var needed_services = <%= @needed_services_js %>;
-    var confirm_text = <%= "\""+_("Some of needed services are going to be blocked. WebYaST may not be usable anymore.")+"\"" %>;
-    function isBlockedAndWasntBlocked(service) {
+    var confirm_text = <%= "\""+_("Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?")+"\"" %>;
+    function isBlockedAndWasAllowed(service) {
       var is_blocked  = ( $("#fw_services_values input[name='"+service.input_name+"']")[0].value == 'false' );
-      var was_allowed = service.allowed;
-      return is_blocked && (was_allowed || ! use_firewall_old);
+      return is_blocked && (service.allowed || ! use_firewall_old);
     }
     function someBlocked(services) {
-      for each (s in services) { if ( isBlockedAndWasntBlocked(s) ) { return true } };
+      for each (s in services) { if ( isBlockedAndWasAllowed(s) ) { return true } };
       return false;
     }
     function blockedNames(services) {
-      return services.filter( isBlockedAndWasntBlocked ).map( function(s) { return s.name });
+      return services.filter( isBlockedAndWasAllowed ).map( function(s) { return s.name });
     }
     if ( $("#use_firewall")[0].checked ) {
-      var some_blocked = someBlocked(needed_services);
-      if ( some_blocked ) {
-        result = confirm(confirm_text + "\n(" + blockedNames(needed_services).join(", ") + ")");
-        return result;
+      if ( someBlocked(needed_services) ) {
+        return confirm( confirm_text.replace("%s", blockedNames(needed_services).join(", ")) );
       } 
     } else {
       return true;
