--- a/plugins/users/app/views/users/_user_form.erb
+++ b/plugins/users/app/views/users/_user_form.erb
@@ -10,7 +10,7 @@
         </p>
         <p>
           <label><%=_("Login Name")%></label>
-          <%= f.text_field :uid, :disabled => disabled, :onblur => "propose_home();" %>
+          <%= f.text_field :uid, :disabled => disabled, :onblur => "$('#userForm').validate().element('#user_uid') && propose_home();", :class => "required" %>
           <%= f.text_field :id, :class => "hidden" %>
         </p>
         <p>
