don't allow empty login (bnc#596035)

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -117,7 +117,7 @@ function disable(which){
         </p>
         <p>
           <div class="label"><%=_("Login Name")%></div>
-          <%= f.text_field :uid, :disabled => disabled, :onblur => "propose_home(this);" %>
+          <%= f.text_field :uid, :disabled => disabled, :onblur => "$('#form_"+user.uid+"').validate().element('#user_uid') && propose_home(this);", :class => "required" %>
           <%= f.text_field :id, :class => "hidden" %>
         </p>
         <p>
