--- a/plugins/eulas/app/views/eulas/show.html.erb
+++ b/plugins/eulas/app/views/eulas/show.html.erb
@@ -7,7 +7,7 @@
 <% form_tag :method => :post, :controller => :eulas, :action => :update, :id => @eula_id, :class => 'container' do  -%>
   <%= _("Available translations:") -%>
   <%= select_tag "text_lang",
-                 options_for_select(@eula.available_langs, :selected => @eula.text_lang),
+                 options_for_select(@eula.available_langs.map {|lang| [language_name(lang),lang]}, :selected => @eula.text_lang),
                  :onchange => "location.href='" + (url_for :controller => "eulas", :id => @eula_id, :action => :show) + "?eula_lang=' + value"
       %>
 
