--- a/plugins/eulas/app/views/eulas/show.html.erb
+++ b/plugins/eulas/app/views/eulas/show.html.erb
@@ -3,37 +3,31 @@
 </div>
 
 <div class="plugin-content grid_12" id="eula">
-<fieldset id="" class="">
-<% form_tag :method => :post, :controller => :eulas, :action => :update, :id => @eula_id, :class => 'container' do  -%>
+<% form_for(:eula, 
+            :url => { :action => :update, :id => @eula_id }, 
+            :html=> { :method => :put} 
+           ) do |f|  -%>
+<fieldset class="wrapper with-background">
   <%= _("Available translations:") -%>
-  <%= select_tag "text_lang",
-                 options_for_select(@eula.available_langs.map {|lang| [language_name(lang),lang]}, :selected => @eula.text_lang),
-                 :onchange => "location.href='" + (url_for :controller => "eulas", :id => @eula_id, :action => :show) + "?eula_lang=' + value"
+  <%= f.select :text_lang, 
+               @eula.available_langs.map {|lang| [language_name(lang),lang]}, 
+               :onchange => "location.href='" + (url_for :controller => "eulas", :id => @eula_id, :action => :show) + "?eula_lang=' + value"
       %>
-
-  <br/>
-  <textarea cols="95" rows="30" readonly>
-  <%= @eula.text -%>
-  </textarea>
-  <br/>
-  <% if @eula.only_show then -%>
-    <input type="hidden" name="accepted" value="true"/>
-  <% else -%>
-    <input type="radio" name="accepted" value="true" 
-      <%= @eula.accepted ? 'checked="checked"' : "" %>
-      <%= @eula.accepted ? 'readonly="readonly"' : "" %>
-      />
-    <%= _("Yes, I agree to the license agreement.") %>
-    <br/>
-    <input type="radio" name="accepted" value="false" 
-      <%= @eula.accepted ? "" : 'checked="checked"' %>
-      <%= @eula.accepted ? 'readonly="readonly"' : '' %>
-      />
-    <%= _("No, I do not agree.") %>
-    <br/>
+  <%= f.text_area :text, :cols => 95, :rows => 30, :readonly => true %>
+  <% if @eula.only_show %>
+  <%=  f.hidden_field :accepted, :true %>
+  <% else %>
+       <div>
+  <%=  f.radio_button :accepted, :true, :checked => @eula.accepted, :readonly => @eula.accepted %>
+  <%=  _("Yes, I agree to the license agreement.") %>
+       </div>
+       <div>
+  <%=  f.radio_button :accepted, :false, :checked => (! @eula.accepted), :readonly => @eula.accepted %>
+  <%=  _("No, I do not agree.") %>
+       </div>
   <% end -%>
   <% unless @eula.text_lang == 'en' then %>
-    <input type="hidden" name="eula_lang" value="<%= @eula.text_lang %>"/>
+  <%= f.hidden_field :text_lang %>
   <% end %>
 </fieldset>
 <fieldset id="" class="">
