--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -819,3 +819,13 @@ p.missing-permissions {
   margin-left: 1em;
   color: #ff9900;
 }
+
+div#browserWarning {
+  background-color: '#fcfdde';
+  width: 100%;
+  border-top: solid 1px #000;
+  border-bottom: solid 1px #000;
+  text-align: center;
+  padding: 5px 0px 5px 0px;
+}
+
