--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -40,7 +40,13 @@
 
   $(document).ready(function(){
 
-   $("#userForm").validate()
+   $("#userForm").validate();
+
+// make the error message translatable - override the default messsage
+   $.extend($.validator.messages, {
+     equalTo:  "<%= _("The passwords do not match.") -%>",
+     required: "<%= _("This field is required.") -%>"
+   });
 
    $("#userForm").validate({
     rules: {
