add more dirty hack to work always validation

--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -45,6 +45,7 @@
 			 }
 		  }
 		}).form();
+    $("#ntp_server").keyup( function() {$("#timeForm").valid();}); //avoid problems with validation when element change
 	 });
 </script>
 
